@@ -45,3 +45,4 @@ Changes:
 37. Update Validation Handler class allow users to translate the defaults msgs of validations.
 38. Update FileHandling class fix logical mistake.
 39. Added two functions in helper.php (read and write file).
+40. Added pagination class and pagination function.
